# ts-native

./: .cspell.json  .gitignore  .prettierrc  Cargo.toml  README.md  build.ts  build.zig  build.zig.zon  main.ts  package.json  pnpm-lock.yaml  tsconfig.json
.devcontainer/: devcontainer.json
crates/ts-c-api/: Cargo.toml
crates/ts-compiler/: Cargo.toml  README.md  package.json
crates/ts-compiler/examples/: 1.ts
crates/ts-compiler/src/: lib.rs  main.rs
crates/ts-parser/: Cargo.toml  package.json  tsn.pest
crates/ts-runtime/: Cargo.toml  package.json
crates/ts-std/: Cargo.toml  README.md  package.json
crates/ts-std/lib/: index.d.ts  libc.d.ts  libc.math.d.ts  libc.stdio.d.ts  libc.stdlib.d.ts  libc.string.d.ts  libc.time.d.ts
examples/: hello.ts  tsconfig.json
scripts/: build_std.ts  main.ts  tsconfig.json
src/: main.zig  reflect.zig  root.zig
std/: index.d.ts  libc.d.ts
