[workspace]
members = ["crates/ts-compiler", "crates/ts-parser", "crates/ts-runtime", "crates/ts-std"]
resolver = "2"

[workspace.dependencies]
anyhow = "^1.0.93"
async-trait = "^0.1.83"
colored = "^2.1"
config = "^0.14.1"
dotenvy = "^0.15"
env_logger = "^0.11.5"
envy = "^0.4"
futures = "0.3.31"
futures-util = "^0.3.31"
lazy_static = "^1.5.0"
log = "^0.4.22"
proc-macro2 = "^1.0.91"
serde_json = "^1.0.133"
tempfile = "^3.14.0"
thiserror = "^2.0.3"

[workspace.dependencies.clap]
features = ["derive", "string"]
version = "^4.5.21"

[workspace.dependencies.derive_more]
features = ["full"]
version = "^1.0.0"

[workspace.dependencies.serde]
features = ["derive"]
version = "^1.0.215"

[workspace.dependencies.syn]
features = ["full"]
version = "^2.0.89"

[workspace.dependencies.tokio]
features = ["full"]
version = "^1.41.1"

[workspace.dependencies.tracing-subscriber]
version = "^0.3"

[workspace.dependencies.validator]
features = ["derive"]
version = "^0.19.0"
