[workspace]
members = ["crates/ts-compiler", "crates/ts-parser", "crates/ts-runtime", "crates/ts-std"]
resolver = "2"

[workspace.dependencies]
anyhow = "^1.0.93"
env_logger = "^0.11.5"
envy = "^0.4"
futures = "0.3.31"
futures-util = "^0.3.31"
lazy_static = "^1.5.0"
log = "^0.4.22"
oxc = { version = "*", features = ["full"] }
proc-macro2 = "^1"
quote = "^1.0.38"
rayon = "^1.5.1"
serde_json = "^1.0.133"
serde = { version = "^1.0.133", features = ["derive"] }
tokio = { version = "^1", features = ["full"] }
