[package]
name = "ts-compiler"
version = "0.1.0"
edition = "2021"
description = "typescript native compiler"

[[bin]]
name = "tsnc"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
llvm-sys = { workspace = true }
oxc = { workspace = true}
rayon = { workspace = true }
tokio = { workspace = true }
